3.0.1 (released xx.xx.xxxx)
  * Use more uv command to replace other build tools, ie. twine.

3.0.0 (released 25.09.2024)
  * When a program does not support a compression type, try to find other programs instead of failing.
    This changes some library functions which are not part of the official API, but might be used by
    other programs, hence the major version upgrade.
    Thanks to github user benjaminwinger for the idea and initial patch!
    Closes: GH bug #87
  * Better detection for tar programs which compression is supported.
    Closes: GH bug #86
  * The Python module "tarfile" supports LZMA and XZ compressed archives.
    Added tests for these archive formats (.tar.lzma and .tar.xz).
  * Do not print program output when running with verbosity=-1.
    Closes: GH bug #157


2.4.0 (released 21.08.2024)
  * Document that patool extracts the archive for the search and repack commands.
    Closes: GH bug #154
  * Add supported_formats() API function listing supported formats and operations
    for each format.
    Idea and patch by github user nohr-ai, thanks!


2.3.0 (released 26.06.2024)
  * Add linting check to github workflow CI.
    Idea and patch by sorairolake, thanks!
  * Format the python code with ruff, and
    add a check to github workflow CI.
    Idea and initial patch by sorairolake, thanks!
    Closes: GH bug #151
  * Support tar --zstd for extracting TAR archives compressed with ZSTANDARD.
    Closes: GH bug #162
  * Use locale.getpreferredencoding() instead of sys.stderr.encoding for
    logging output encoding.
    Closes: GH bug #158


2.2.0 (released 14.02.2024)

* Improved detection when running under pythonw.exe.
  Also fixes the output problems on Windows systems.
  Closes: GH bug #147, #142
* Document API functions.


2.1.1 (released 26.01.2024)

* Added support for 7zz and 7zzs programs from the Linux-specific release
  of 7-Zip.
  Closes: GH bug #145


2.1.0 (released 17.01.2024)
