@@ -5,8 +5,8 @@ NAME
 
 SYNOPSIS
         patool         [global-options]        (list|test|extract|cre‐
-       ate|diff|search|repack|formats) [command-options]  <command-ar‐
-       guments>...
+       ate|diff|search|repack|formats|version) [command-options] [com‐
+       mand-arguments]...
 
 DESCRIPTION
        Various  archive  formats  can  be  created, extracted, tested,
@@ -47,13 +47,17 @@ GLOBAL OPTIONS
               the output of helper applications. Can be given multiple
               times to increase the output even more.
 
+       -q, --quiet
+              Work  quietly,  exept  on  commands formats and version,
+              which still print their output.
+
        --non-interactive
-              Try  to prevent any interactive user input (i.e. prompt‐
-              ing for passwords or for overwriting  duplicate  files).
+              Try to prevent any interactive user input (i.e.  prompt‐
+              ing  for  passwords or for overwriting duplicate files).
               Use this option with care since overwriting files or ig‐
-              noring password prompts could lead to unintended  conse‐
+              noring  password prompts could lead to unintended conse‐
               quences.
-              This  only works for programs that allow preventing user
+              This only works for programs that allow preventing  user
               prompts. Currently those are arj, 7z and rar.
 
 COMMANDS
@@ -63,9 +67,9 @@ COMMANDS
 
        •   The original archive will never be removed.
 
-       •   Files outside the output directory will never  be  created.
+       •   Files  outside  the output directory will never be created.
            This relies on archive program options to prevent unpacking
-           of files  with  an  absolute  path  name  (e.g.  --no-abso‐
+           of  files  with  an  absolute  path  name  (e.g. --no-abso‐
            lute-filenames for cpio(1)).
 
        The following commands are available.
@@ -73,27 +77,27 @@ COMMANDS
    extract
        patool extract [--outdir directory] <archive>...
 
-       Extract  files  from given archives. The original archives will
+       Extract files from given archives. The original  archives  will
        never be removed and are left as is.
 
        --outdir directory
               Extract to the given output directory. Default is to ex‐
               tract to the current working directory.
 
-       If  the archive contains exactly one file or directory, the ar‐
-       chive contents are extracted directly to the output  directory.
+       If the archive contains exactly one file or directory, the  ar‐
+       chive  contents are extracted directly to the output directory.
        Else the files are extracted in a newly created subdirectory of
-       the output directory. The new directory is named after the  ar‐
+       the  output directory. The new directory is named after the ar‐
        chive filename without the extension.
-       This  prevents  cluttering  the  output directory with a lot of
+       This prevents cluttering the output directory  with  a  lot  of
        files from the extracted archive.
 
-       All extracted files are ensured that they are readable  by  the
+       All  extracted  files are ensured that they are readable by the
        current user.
 
-       If  extracting  an archive has an error in the middle of opera‐
+       If extracting an archive has an error in the middle  of  opera‐
        tion, patool does not remove the temporary extraction directory
-       This  directory  whose name starts with "Unpack_" has all files
+       This directory whose name starts with "Unpack_" has  all  files
        that have been extracted before the error.
 
    list
@@ -104,16 +108,16 @@ COMMANDS
    create
        patool create <archive> <file-or-directory>...
 
-       Create an archive from given files. All of the given  files  to
-       add  to  the archive must be readable by the current user.  The
-       format of the archive to create is determined  by  the  archive
-       file  extension. If the archive program has options to maximize
+       Create  an  archive from given files. All of the given files to
+       add to the archive must be readable by the current  user.   The
+       format  of  the  archive to create is determined by the archive
+       file extension. If the archive program has options to  maximize
        file compression, patool uses those options.
 
    test
        patool test <archive>...
 
-       Test the given archives. If the  helper  application  does  not
+       Test  the  given  archives.  If the helper application does not
        support testing, the archive contents are listed instead.
 
    diff
@@ -126,21 +130,21 @@ COMMANDS
        patool search <pattern> <archive>
 
        Unpack the given archive in a temporary directory and search in
-       archive  contents  for given pattern using the grep(1) program.
-       The grep options used are -r; additional options  can  be  sup‐
+       archive contents for given pattern using the  grep(1)  program.
+       The  grep  options  used are -r; additional options can be sup‐
        plied with the GREP_OPTIONS environment variable.
 
    repack
        patool repack <archive> <archive_new>
 
-       Extract  and  re-compress  archive  to a different format.  The
-       target archive format is determined by the  file  extension  of
+       Extract and re-compress archive to  a  different  format.   The
+       target  archive  format  is determined by the file extension of
        archive_new.
 
    formats
        patool formats
 
-       Show  all supported archive formats (i.e. which helper applica‐
+       Show all supported archive formats (i.e. which helper  applica‐
        tions are available).
 
    version
@@ -149,14 +153,14 @@ COMMANDS
        Print version information.
 
 HELP OPTION
-       Specifying the help option displays help for patool itself,  or
+       Specifying  the help option displays help for patool itself, or
        a command.
        For example:
          patool --help - display help for patool
          patool extract --help - display help for the extract command
 
 SHELL ALIASES
-       When  running  under  a Unix shell the following aliases can be
+       When running under a Unix shell the following  aliases  can  be
        defined to save some typing:
          alias pl='patool list'
          alias px='patool extract'
@@ -167,6 +171,6 @@ AUTHOR
        Bastian Kleineidam <bastian.kleineidam@web.de>
 
 COPYRIGHT
-       Copyright © 2010-2023 Bastian Kleineidam
+       Copyright © 2010-2024 Bastian Kleineidam
 
-patool                         July 2013                     PATOOL(1)
+patool                       October 2024                    PATOOL(1)
